--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root{
-    --cor-fundo: #000000;
-    --cor-principal: #000000 ;
+    --cor-fundo: #01080E;
+    --cor-principal: #0B0D20 ;
     --cor-secundaria: #212333;
-    --cor-destaque: #2d00f7;
-    --cor-texto: #00ff4c;
+    --cor-destaque: #2BDEFD;
+    --cor-texto: #D7F9FF;
 }
 
 body{
@@ -29,13 +29,12 @@ h1{
 
 .caixa-perguntas{
     padding-bottom: 10px;
-}
-:root{
-    --cor-fundo: #000000;
-    --cor-principal: #000000 ;
+}:root{
+    --cor-fundo: #01080E;
+    --cor-principal: #0B0D20 ;
     --cor-secundaria: #212333;
-    --cor-destaque: #2d00f7;
-    --cor-texto: #00ff4c;
+    --cor-destaque: #2BDEFD;
+    --cor-texto: #D7F9FF;
 }
 
 button{
@@ -50,4 +49,18 @@ button{
 button:hover{
     background-color: var(--cor-destaque);
     color: var(--cor-principal);
+}
+/* Adiciona transição suave aos botões */
+button {
+    background-color: var(--cor-secundaria);
+    color: var(--cor-texto);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;
+    transition: background-color 0.3s, transform 0.3s;
+}
+button:hover {
+    background-color: var(--cor-destaque);
+    color: var(--cor-principal);
+    transform: scale(1.05);
 }
